New files added - [PersonTest.js,README.md,PersonTest.variables.json,page.min.html,PersonTest.html,PersonTest.css,servicedef.xml,MyBasicController.java,MyBasicService.spring.xml,MyBasicService.java,PersonTest] Files modified - [basicsDB.properties,UserController.java,Type.java,Type.html,app.variables.json,User.html,User.js,PersonType.js,Place.html,Type.variables.json,PersonController.java,Person.variables.json,Place.variables.json,page.min.html,ProcedureExecutionController.java,page.min.html,pages-config.json,PlaceController.java,TypeController.java,project-services.xml,servicedef.xml,User.variables.json,page.min.html,PersonType.variables.json,Type.js,PersonType.html,QueryExecutionController.java,Person.html,Person.js,page.min.html,page.min.html,basicsDB_published_dataModel.json,Place.js,PersonTypeController.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -11,6 +11,9 @@
   "name" : "Person",
   "type" : "PAGE"
 }, {
+  "name" : "PersonTest",
+  "type" : "PAGE"
+}, {
   "name" : "PersonType",
   "type" : "PAGE"
 }, {
