--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -16,7 +16,7 @@
     "operation" : "toast"
   },
   "BasicsDBPersonData" : {
-    "_id" : "wm-BasicsDBPersonData-wm.LiveVariable-1463983378605",
+    "_id" : "wm-BasicsDBPersonData-wm.LiveVariable-1464000237686",
     "name" : "BasicsDBPersonData",
     "owner" : "App",
     "category" : "wm.LiveVariable",
@@ -130,7 +130,7 @@
       "primaryFields" : [ "id" ]
     },
     "isDefault" : true,
-    "bindCount" : 2,
+    "bindCount" : 10,
     "tableName" : "PERSON",
     "tableType" : "TABLE",
     "dbSystem" : "MySQL",
@@ -144,201 +144,8 @@
     } ],
     "package" : "com.basics.basicsdb.Person"
   },
-  "BasicsDBPersonTypeData" : {
-    "_id" : "wm-BasicsDBPersonTypeData-wm.LiveVariable-1463983378615",
-    "name" : "BasicsDBPersonTypeData",
-    "owner" : "App",
-    "category" : "wm.LiveVariable",
-    "dataBinding" : [ ],
-    "operation" : "read",
-    "dataSet" : {
-      "dataValue" : ""
-    },
-    "type" : "PersonType",
-    "isList" : true,
-    "saveInPhonegap" : false,
-    "firstRow" : 0,
-    "maxResults" : 20,
-    "designMaxResults" : 10,
-    "startUpdate" : false,
-    "autoUpdate" : true,
-    "inFlightBehavior" : "executeLast",
-    "transformationRequired" : false,
-    "liveSource" : "basicsDB",
-    "ignoreCase" : false,
-    "matchMode" : "start",
-    "propertiesMap" : {
-      "columns" : [ {
-        "fieldName" : "person",
-        "type" : "integer",
-        "fullyQualifiedType" : "integer",
-        "columnName" : "PERSON_ID",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 10,
-        "generator" : "assigned",
-        "isRelated" : true,
-        "defaultValue" : "",
-        "relatedTableName" : "PERSON",
-        "relatedEntityName" : "Person",
-        "relatedFieldName" : "person.id",
-        "isList" : false,
-        "targetTable" : "PERSON",
-        "scale" : 0,
-        "columns" : [ {
-          "fieldName" : "place",
-          "type" : "integer",
-          "fullyQualifiedType" : "integer",
-          "columnName" : "PLACE_ID",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 10,
-          "generator" : "assigned",
-          "isRelated" : true,
-          "defaultValue" : "",
-          "targetTable" : "PLACE",
-          "scale" : 0
-        }, {
-          "fieldName" : "id",
-          "type" : "integer",
-          "fullyQualifiedType" : "integer",
-          "columnName" : "ID",
-          "isPrimaryKey" : true,
-          "notNull" : true,
-          "length" : 255,
-          "precision" : 10,
-          "generator" : "identity",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "name",
-          "type" : "string",
-          "fullyQualifiedType" : "string",
-          "columnName" : "NAME",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 19,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "age",
-          "type" : "integer",
-          "fullyQualifiedType" : "integer",
-          "columnName" : "AGE",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 10,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        } ]
-      }, {
-        "fieldName" : "type",
-        "type" : "integer",
-        "fullyQualifiedType" : "integer",
-        "columnName" : "TYPE_ID",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 10,
-        "generator" : "assigned",
-        "isRelated" : true,
-        "defaultValue" : "",
-        "relatedTableName" : "TYPE",
-        "relatedEntityName" : "Type",
-        "relatedFieldName" : "type.id",
-        "isList" : false,
-        "targetTable" : "TYPE",
-        "scale" : 0,
-        "columns" : [ {
-          "fieldName" : "id",
-          "type" : "integer",
-          "fullyQualifiedType" : "integer",
-          "columnName" : "ID",
-          "isPrimaryKey" : true,
-          "notNull" : true,
-          "length" : 255,
-          "precision" : 10,
-          "generator" : "identity",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "name",
-          "type" : "string",
-          "fullyQualifiedType" : "string",
-          "columnName" : "NAME",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 19,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        }, {
-          "fieldName" : "minAge",
-          "type" : "integer",
-          "fullyQualifiedType" : "integer",
-          "columnName" : "MIN_AGE",
-          "isPrimaryKey" : false,
-          "notNull" : false,
-          "length" : 255,
-          "precision" : 10,
-          "generator" : "assigned",
-          "isRelated" : false,
-          "defaultValue" : "",
-          "scale" : 0
-        } ]
-      }, {
-        "fieldName" : "id",
-        "type" : "integer",
-        "fullyQualifiedType" : "integer",
-        "columnName" : "ID",
-        "isPrimaryKey" : true,
-        "notNull" : true,
-        "length" : 255,
-        "precision" : 10,
-        "generator" : "identity",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      } ],
-      "entityName" : "PersonType",
-      "fullyQualifiedName" : "com.basics.basicsdb.PersonType",
-      "tableType" : "TABLE",
-      "primaryFields" : [ "id" ]
-    },
-    "isDefault" : true,
-    "tableName" : "PERSON_TYPE",
-    "tableType" : "TABLE",
-    "dbSystem" : "MySQL",
-    "properties" : [ "person", "type" ],
-    "relatedTables" : [ {
-      "columnName" : "person",
-      "relationName" : "person",
-      "type" : "Person",
-      "watchOn" : "BasicsDBPersonData",
-      "package" : "com.basics.basicsdb.PersonType"
-    }, {
-      "columnName" : "type",
-      "relationName" : "type",
-      "type" : "Type",
-      "watchOn" : "BasicsDBTypeData",
-      "package" : "com.basics.basicsdb.PersonType"
-    } ],
-    "package" : "com.basics.basicsdb.PersonType"
-  },
   "BasicsDBPlaceData" : {
-    "_id" : "wm-BasicsDBPlaceData-wm.LiveVariable-1463983378618",
+    "_id" : "wm-BasicsDBPlaceData-wm.LiveVariable-1464000237701",
     "name" : "BasicsDBPlaceData",
     "owner" : "App",
     "category" : "wm.LiveVariable",
@@ -353,7 +160,7 @@
     "firstRow" : 0,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "startUpdate" : false,
+    "startUpdate" : true,
     "autoUpdate" : true,
     "inFlightBehavior" : "executeLast",
     "transformationRequired" : false,
@@ -394,6 +201,7 @@
       "primaryFields" : [ "id" ]
     },
     "isDefault" : true,
+    "bindCount" : 2,
     "tableName" : "PLACE",
     "tableType" : "TABLE",
     "dbSystem" : "MySQL",
@@ -402,7 +210,7 @@
     "package" : "com.basics.basicsdb.Place"
   },
   "BasicsDBTypeData" : {
-    "_id" : "wm-BasicsDBTypeData-wm.LiveVariable-1463983378622",
+    "_id" : "wm-BasicsDBTypeData-wm.LiveVariable-1464000237704",
     "name" : "BasicsDBTypeData",
     "owner" : "App",
     "category" : "wm.LiveVariable",
@@ -453,13 +261,13 @@
         "scale" : 0
       }, {
         "fieldName" : "minAge",
-        "type" : "integer",
-        "fullyQualifiedType" : "integer",
+        "type" : "string",
+        "fullyQualifiedType" : "string",
         "columnName" : "MIN_AGE",
         "isPrimaryKey" : false,
         "notNull" : false,
         "length" : 255,
-        "precision" : 10,
+        "precision" : 19,
         "generator" : "assigned",
         "isRelated" : false,
         "defaultValue" : "",
@@ -471,7 +279,7 @@
       "primaryFields" : [ "id" ]
     },
     "isDefault" : true,
-    "bindCount" : 2,
+    "bindCount" : 6,
     "tableName" : "TYPE",
     "tableType" : "TABLE",
     "dbSystem" : "MySQL",
@@ -480,7 +288,7 @@
     "package" : "com.basics.basicsdb.Type"
   },
   "BasicsDBUserData" : {
-    "_id" : "wm-BasicsDBUserData-wm.LiveVariable-1463983378630",
+    "_id" : "wm-BasicsDBUserData-wm.LiveVariable-1464000237706",
     "name" : "BasicsDBUserData",
     "owner" : "App",
     "category" : "wm.LiveVariable",
@@ -495,7 +303,7 @@
     "firstRow" : 0,
     "maxResults" : 20,
     "designMaxResults" : 10,
-    "startUpdate" : false,
+    "startUpdate" : true,
     "autoUpdate" : true,
     "inFlightBehavior" : "executeLast",
     "transformationRequired" : false,
@@ -549,6 +357,7 @@
       "primaryFields" : [ "id" ]
     },
     "isDefault" : true,
+    "bindCount" : 2,
     "tableName" : "USER",
     "tableType" : "TABLE",
     "dbSystem" : "MySQL",
@@ -572,6 +381,16 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "Person",
+    "pageTransitions" : "none"
+  },
+  "goToPage_PersonTest" : {
+    "_id" : "wm-goToPage_PersonTest-wm.NavigationVariable-1464002925778",
+    "name" : "goToPage_PersonTest",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "PersonTest",
     "pageTransitions" : "none"
   },
   "goToPage_PersonType" : {
@@ -613,6 +432,41 @@
     "operation" : "gotoPage",
     "pageName" : "User",
     "pageTransitions" : "none"
+  },
+  "MyBasicServiceAssociateTypesWithPerson" : {
+    "_id" : "wm-MyBasicServiceAssociateTypesWithPerson-wm.ServiceVariable-1464006122506",
+    "name" : "MyBasicServiceAssociateTypesWithPerson",
+    "owner" : "App",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ ],
+    "type" : "string",
+    "service" : "MyBasicService",
+    "operation" : "associateTypesWithPerson",
+    "serviceType" : "JavaService",
+    "wmServiceOperationInfo" : {
+      "relativePath" : "/myBasic/associateTypesWithPerson",
+      "httpMethod" : "get",
+      "name" : "associateTypesWithPerson",
+      "produces" : [ "application/json" ],
+      "parameters" : [ {
+        "name" : "name",
+        "parameterType" : "query",
+        "type" : "string"
+      } ]
+    },
+    "dataSet" : {
+      "dataValue" : ""
+    },
+    "isList" : false,
+    "firstRow" : 0,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "startUpdate" : false,
+    "autoUpdate" : true,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "isDefault" : true
   },
   "supportedLocale" : {
     "_id" : "wm-wm.Variable1402640443182",
