New files added - [] Files modified - [servicedef.xml,MyBasicController.java,app.variables.json,MyBasicService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -445,13 +445,18 @@
     "serviceType" : "JavaService",
     "wmServiceOperationInfo" : {
       "relativePath" : "/myBasic/associateTypesWithPerson",
-      "httpMethod" : "get",
+      "httpMethod" : "post",
       "name" : "associateTypesWithPerson",
       "produces" : [ "application/json" ],
+      "consumes" : [ "multipart/form-data" ],
       "parameters" : [ {
-        "name" : "name",
-        "parameterType" : "query",
+        "name" : "person",
+        "parameterType" : "formData",
         "type" : "string"
+      }, {
+        "name" : "formdata",
+        "parameterType" : "formData",
+        "type" : "array"
       } ]
     },
     "dataSet" : {
